[project]
name = "comfyui-math-helper"
description = "Ein ComfyUI Custom Node für grundlegende mathematische Operationen."
authors = [
    {name = "Hangover3832"},
]
version = "1.0.0"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["comfyui", "custom-node", "math", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Repository = "https://github.com/Hangover3832/ComfyUI-MathHelper"
Issues = "https://github.com/Hangover3832/ComfyUI-MathHelper/issues"

[tool.comfy]
Frontend = "WEB/"
